# claudecodemonitor-windows

./: .gitignore  CLAUDE.md  README.md  settings.json.example
hooks/: claude-island-state.py
tm-plugin/: CMakeLists.txt  ClaudeCodePlugin.cpp  ClaudeCodePlugin.def  PluginInterface.h  build_mingw.bat
